--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
    <script src="Index.js"></script>
 </head>
 <body>
-  */สร้าง Tab + รูปภาพ Tab เชียงใหม่/*
+  /*สร้าง Tab + รูปภาพ Tab เชียงใหม่*/
   <div class="content">
   <div class="expert-header">
   </div>
 </div>
-*/ปุ่มแต่ละปุ่มใน tab/*
+/*ปุ่มแต่ละปุ่มใน tab*/
   <div class="topnav">
   <a class="active" href="index.html">หน้าแรก</a>
   <a href="#news">สถานที่ท่องเที่ยวแนะนำ</a>
   <a href="#contact">แสดงความคิดเห็น</a>
 </div>
-*/ส่วนเนื้อหา/*
+/*ส่วนเนื้อหา*/
 <div class="content">
 <p></p>
 <img src="Image/pictureIndex.jpg" alt="Index Picture" class="center">
