[DELETE]BG Color

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-   <title>Adventures in Tuscany</title>
+   <title>Trip at Ciangmai</title>
    <meta charset="utf-8">
    <style type="text/css">
-	body {background-color: #ede49c;}
+    @import url("Index.css");
    </style>
+   <script src="Index.js"></script>
 </head>
 <body>
 	
