[ADD]allTrip Table

--- a/allTrip.html
+++ b/allTrip.html
@@ -19,6 +19,12 @@
   <a class="active" href="allTrip.html">สถานที่ท่องเที่ยวแนะนำ</a>
   <a href="#contact">แสดงความคิดเห็น</a>
 </div>
+<table align="center">
+   <tr>
+  <th>สถานที่เที่ยว</th>
+  <th>ที่อยู่</th>
+  </tr>
 
+</table>
 </body>
 </html>
