[ADD] DoiIntanon Pratat Maejam

--- a/DoiIntanon.html
+++ b/DoiIntanon.html
@@ -25,7 +25,7 @@
 <div class="content">
 <p></p>
 <img src="Image/doiintanon.jpg" alt="Index Picture" class="center">
-<h1>เชียงใหม่น่าเที่ยว</h1>
+<h1>ดอยอินทนนท์</h1>
 <p>&nbsp&nbsp&nbspดอยอินทนนท์ ยอดเขาที่สูงที่สุดในประเทศไทยเพราะจะขึ้นเหนือทั้งทีต้องไปให้สุด ถือเป็นอีกหนึ่งแลนด์มาร์คสำคัญในจังหวัดเชียงใหม่ นอกจากจะไปถ่ายกับป้ายสูงสุดแดนสยามแล้ว ยังมีจุดชมทะเลหมอกที่สวยงาม หรือจะเดินชมความเขียวขจีของผืนป่า ในเส้นทางศึกษาธรรมชาติกิ่วแม่ปาน และอ่างกา ที่ชวงนี้เปิดให้เข้าไปเดินเล่นในทุ่งหญ้า สูดอากาศรับลมหนาวอย่างเต็มที่
 
 และที่ดอยอินทนนท์ มีจะ พระมหาธาตุเจดีย์ที่ตั้งคู่กันสององค์ ซึ่งเป็นพระมหาธาตุคู่พระบารมีของรัชกาลที่ 9 และพระราชินีชื่อว่า พระมหาธาตุนภเมทนีดลและพระมหาธาตุนภพลภูมิสิริ</p>
