--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-   <title>Trip at Ciangmai</title>
+   <title>Trip at Chiangmai</title>
    <meta charset="utf-8">
    <style type="text/css">
     @import url("Index.css");
