--- a/allTrip.html
+++ b/allTrip.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
    <title>Trip at Ciangmai</title>
    <meta charset="utf-8">
@@ -10,21 +9,19 @@
    <script src="Index.js"></script>
 </head>
 <body>
-	<div class="content">
+  <div class="content">
   <div class="expert-header">
   </div>
-</div>
+  </div>
   <div class="topnav">
   <a href="index.html">หน้าแรก</a>
   <a class="active" href="allTrip.html">สถานที่ท่องเที่ยวแนะนำ</a>
+  <a href="#news">สถานที่ท่องเที่ยวแนะนำ</a>
   <a href="#contact">แสดงความคิดเห็น</a>
-</div>
-<table align="center">
-   <tr>
-  <th>สถานที่เที่ยว</th>
-  <th>ที่อยู่</th>
-  </tr>
-
+  </div>
+  <div class="content">
+    dfgdf
+  </div>
 </table>
 </body>
 </html>
