--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
    <title>Trip at Ciangmai</title>
    <meta charset="utf-8">
@@ -13,17 +12,19 @@
   <div class="content">
   <div class="expert-header">
   </div>
-</div>
+  </div>
   <div class="topnav">
   <a class="active" href="index.html">หน้าแรก</a>
   <a href="allTrip.html">สถานที่ท่องเที่ยวแนะนำ</a>
+  <a href="#news">สถานที่ท่องเที่ยวแนะนำ</a>
   <a href="#contact">แสดงความคิดเห็น</a>
-</div>
+  </div>
 <div class="content">
-<p></p>
-<img src="Image/pictureIndex.jpg" alt="Index Picture" class="center">
+<div class="center">
+<img src="Image/pictureIndex.jpg" alt="Index Picture">
 <h1>เชียงใหม่น่าเที่ยว</h1>
 <p>&nbsp&nbsp&nbspเชียงใหม่เป็นเมืองที่ล้อมรอบด้วยภูเขา ตั้งอยู่ทางภาคเหนือของประเทศไทย ก่อตั้งขึ้นในปี พ.ศ.1839 ในฐานะเมืองหลวงของอาณาจักรล้านนาซึ่งเป็นรัฐอิสระจนถึงปี พ.ศ.2101 บริเวณเขตเมืองเก่าของเชียงใหม่ยังคงมีซากกำแพงเมืองและคูเมืองโบราณที่ในอดีตเคยเป็นศูนย์กลางทางวัฒนธรรมและศาสนา และยังเป็นที่ตั้งของวัดทางพุทธศาสนาที่ก่อสร้างอย่างประณีตงดงามนับร้อยๆ แห่ง รวมถึงวัดพระสิงห์ที่สร้างขึ้นในศตวรรษที่ 14 และวัดเจดีย์หลวงที่สร้างขึ้นในศตวรรษที่ 15 ซึ่งประดับประดาด้วยรูปปั้นพญานาค</p>
+</div>
 </div>
 </body>
 </html>
