--- a/allTrip.html
+++ b/allTrip.html
@@ -4,7 +4,10 @@
    <title>Trip at Ciangmai</title>
    <meta charset="utf-8">
    <style type="text/css">
+    @import url("imageAll.css");
     @import url("Index.css");
+    /*@import url("Index.css");
+    @import url("imageAll.css");*/
    </style>
    <script src="Index.js"></script>
 </head>
@@ -20,8 +23,13 @@
   <a href="#contact">แสดงความคิดเห็น</a>
   </div>
   <div class="content">
-    dfgdf
-  </div>
+    <img src="Image/allTrip/1.jpg" alt="wdadaws" id="image1">
+    <form action="Montainkiss.html">
+    <button class="button1 buttonH">เพิ่มเติม</button>
+    </form>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+ </div>
 </table>
 </body>
 </html>
