--- a/allTrip.html
+++ b/allTrip.html
@@ -25,7 +25,11 @@
   <div class="content">
     <img src="Image/allTrip/1.jpg" alt="wdadaws" id="image1">
     <form action="Montainkiss.html">
-    <button class="button1 buttonH">เพิ่มเติม</button>
+    <button class="button1">เพิ่มเติม</button>
+    </form>
+    <img src="Image/allTrip/2.jpg" alt="wdadaws" id="image2">
+    <form action="Montainkiss.html">
+    <button class="button2">เพิ่มเติม</button>
     </form>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
