--- a/trip/Montainkiss.html
+++ b/trip/Montainkiss.html
@@ -21,15 +21,13 @@
   </div>
 <div class="content">
 <div class="center">
-  <br>
-<img src="Image/Moutainkiss.jpg" alt="chaingdao Picture">
-<br>
 <h1>หน้าผาจูบกัน อุทยานแห่งชาติออบหลวง</h1>
 <p>&nbsp&nbsp&nbspก็เป็นอีกแห่งที่น่าสนใจ และยังไม่เป็นที่รู้จักในวงกว้างมากนัก เต็มไปด้วยความสมบูรณ์ของธรรมชาติ คุณจะได้เห็นทัศนียภาพอันแปลกตา ของภูผา ป่าไม้ สายน้ำ และร่องรอยทางประวัติศาสตร์ในที่เดียวกัน
 
 <b>ออบหลวง</b> เป็นสถานที่น่าเที่ยวที่ธรรมชาติสร้างสรรค์ความสวยงามและน่าเกรงขามไว้ในที่เดียวกัน เป็นเพราะว่าลักษณะทางภูมิศาสตร์ของออบหลวงที่เบื้องล่างเป็นแม่น้ำที่ไหลคดเคี้ยวผ่านช่องเขาขาด ซึ่งช่องเขานี้มีลักษณะเป็นผาสูงชัน และแคบมาก บีบทางน้ำไหลให้แคบเข้า ดังนั้นแม่น้ำตรงนี้จึงเชี่ยวจัด เกิดเสียงน้ำกระทบหน้าผาดังสนั่นโดยรอบ นอกจากนี้ยังมีสะพานเชื่อมช่องเขาขาดสำหรับนักท่องเที่ยวเพื่อชมทัศนียภาพอันงดงามของออบหลวง อีกทั้งมีบริการบ้านพัก สถานที่กางเต็นท์ และสิ่งอำนวยความสะดวกต่างๆ</p>
 <p><b>ค่าธรรมเนียมเข้าอุทยานแห่งชาติออบหลวง</b> : คนไทย ผู้ใหญ่จะอยู่ที่ 40 บาท และเด็กจะอยู่ที่ 20 บาท ส่วนชาวต่างชาติผู้ใหญ่จะอยู่ที่ 200 บาท เด็ก 100 บาท</p>
 <p><b> สอบถามเพิ่มเติมที่อุทยานแห่งชาติออบหลวง</b> โทร. 0 5-322-9272 หรือสำนักอุทยานแห่งชาติ กรมอุทยานแห่งชาติสัตว์ป่าและพันธุ์พืช โทร. 0 2-562-0760 หรือสำรองที่พักด้วยตนเองที่เว็ปไซต์ www.dnp.go.th</p>
+<img src="Image/pictureIndex.jpg" alt="chaingdao Picture">
 </div>
 </div>
 </body>
